manifests/recycle-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pv-recycler
spec:
  restartPolicy: Never
  volumes:
  - name: vol
    hostPath:
      path: /tmp
  containers:
  - name: pv-recycler
    image: "registry.k8s.io/busybox"
    command: ["/bin/sh", "-c", "test -e /scrub && rm -rf /scrub/..?* /scrub/.[!.]* /scrub/*  && test -z \"$(ls -A /scrub)\" || exit 1"]
    volumeMounts:
    - name: vol
      mountPath: /scrub
