manifests/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-db-sts
spec:
  selector:
    matchLabels:
      run: mongodb 
  serviceName: "mongo-service"
  replicas: 1
  template:
    metadata:
      labels:
        run: mongodb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongodb-app
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
          - mountPath: /data/db
            name: mongo-data
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        storageClassName: ""
        accessModes: ["ReadWriteMany"]
        resources:
          requests:
            storage: 300Mi
