manifests/loadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadb-service
spec:
  selector:
    run: node
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
