manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    run: node
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    run: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
