manifests/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    run: http-server
spec:
  hostname: nginx
  containers:
  - name: nginx
    image: nginx:latest
    ports:
      - containerPort: 80
        name: http-web
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx-service
  name: nginx
spec:
  selector:
    run: http-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: http-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port: 
              number: 80
